Fix get involved spacing

--- a/src/pages/get-involved/style.less
+++ b/src/pages/get-involved/style.less
@@ -30,6 +30,7 @@
         .card-container {
           align-items: center;
           display: flex;
+          min-height: 100%;
         }
         .image {
           height: 180px;
